--- a/simple-grid.css
+++ b/simple-grid.css
@@ -83,11 +83,16 @@ footer {
 }
 
 /* ==========================================================================
-   TAB STYLES
+   DESKTOP STYLES
    ========================================================================== */
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1024px) {
+  .container {
+    max-width: 1440px;
+  }
+
   .col-1 {
+    width: 8.3%;
     width: calc(100% / 12 * 1);
   }
 
@@ -133,15 +138,5 @@ footer {
 
   .col-12 {
     width: calc(100% / 12 * 12);
-  }
-}
-
-/* ==========================================================================
-   DESKTOP STYLES
-   ========================================================================== */
-
-@media only screen and (min-width: 1024px) {
-  .container {
-    max-width: 1440px;
   }
 }
